# Video2Article

./: .gitignore  README.md  test_skills.py
multimodal-harness/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
multimodal-harness/docs/: README_en.md  install.md
multimodal-harness/scripts/: run_eval.sh  run_review_app.py
multimodal-harness/src/video_atlas/: __init__.py  settings.py  skill_install.py
multimodal-harness/src/video_atlas/application/: __init__.py  canonical_create.py
multimodal-harness/src/video_atlas/canonical/: default.json
multimodal-harness/src/video_atlas/cli/: __init__.py  main.py
multimodal-harness/src/video_atlas/config/: __init__.py  factories.py  models.py
multimodal-harness/src/video_atlas/generators/: __init__.py  base.py  openai_compatible.py
multimodal-harness/src/video_atlas/message_builder/: __init__.py  messages.py
multimodal-harness/src/video_atlas/parsing/: __init__.py  llm_responses.py
multimodal-harness/src/video_atlas/persistence/: __init__.py  (+1 more)
multimodal-harness/tests/: test_application_canonical_create.py  test_canonical_structure_composition.py  test_cli.py  test_config_loading.py  test_release_smoke.py  test_settings.py  test_skill_install.py  test_source_acquisition_dispatch.py  test_source_acquisition_models.py  test_subtitles.py  test_text_first_canonical_subtitle_preparation.py  test_text_first_canonical_workflow.py  test_text_first_language_resolution.py  test_transcription.py  test_workspace_markdown.py  test_workspace_writers.py  test_xiaoyuzhou_acquisition.py  test_youtube_acquisition.py
(+62 files in other folders)
